[gd_scene load_steps=11 format=2]

[ext_resource path="res://combat/CombatArena.gd" type="Script" id=1]
[ext_resource path="res://combat/turn_queue/TurnQueue.tscn" type="PackedScene" id=3]
[ext_resource path="res://combat/battlers/PorcupineBattler.tscn" type="PackedScene" id=4]
[ext_resource path="res://combat/battlers/BlueBattler.tscn" type="PackedScene" id=5]
[ext_resource path="res://combat/battlers/DanBattler.tscn" type="PackedScene" id=6]
[ext_resource path="res://combat/interface/CombatInterface.gd" type="Script" id=7]
[ext_resource path="res://combat/interface/SelectArrow.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/default.theme" type="Theme" id=9]
[ext_resource path="res://combat/interface/bars/BattlersBarsBuilder.tscn" type="PackedScene" id=10]
[ext_resource path="res://combat/Rewards.gd" type="Script" id=11]

[node name="CombatArena" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node" parent="."]

[node name="TurnQueue" parent="." instance=ExtResource( 3 )]
z_index = 10

[node name="Porcupine" parent="TurnQueue" instance=ExtResource( 4 )]
position = Vector2( 746, 357.096 )
TARGET_OFFSET_DISTANCE = 120.0

[node name="Porcupine2" parent="TurnQueue" instance=ExtResource( 4 )]
position = Vector2( 747.041, 500.278 )
TARGET_OFFSET_DISTANCE = 120.0

[node name="Porcupine3" parent="TurnQueue" instance=ExtResource( 4 )]
position = Vector2( 745.816, 634.825 )
TARGET_OFFSET_DISTANCE = 120.0

[node name="Blue" parent="TurnQueue" instance=ExtResource( 5 )]
position = Vector2( 1201.01, 348.825 )
TARGET_OFFSET_DISTANCE = 120.0
party_member = true

[node name="Dan" parent="TurnQueue" instance=ExtResource( 6 )]
position = Vector2( 1202.78, 490.366 )
TARGET_OFFSET_DISTANCE = 120.0
party_member = true

[node name="CombatInterface" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource( 7 )

[node name="SelectArrow" parent="CombatInterface" instance=ExtResource( 8 )]
position = Vector2( -39, -51 )

[node name="OldSchoolUI" type="Control" parent="CombatInterface"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -186.0
theme = ExtResource( 9 )

[node name="Row" type="HBoxContainer" parent="CombatInterface/OldSchoolUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MonstersPanel" type="Panel" parent="CombatInterface/OldSchoolUI/Row"]
margin_right = 634.0
margin_bottom = 186.0
size_flags_horizontal = 3

[node name="Column" type="VBoxContainer" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="MonsterWidget" type="HBoxContainer" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel/Column"]
margin_right = 594.0
margin_bottom = 23.0

[node name="Name" type="Label" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel/Column/MonsterWidget"]
margin_right = 99.0
margin_bottom = 23.0
text = "Porcupine"

[node name="Life" type="Label" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel/Column/MonsterWidget"]
margin_left = 115.0
margin_right = 594.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "85/120"
align = 2

[node name="MonsterWidget2" type="HBoxContainer" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel/Column"]
margin_top = 39.0
margin_right = 594.0
margin_bottom = 62.0

[node name="Name" type="Label" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel/Column/MonsterWidget2"]
margin_right = 132.0
margin_bottom = 23.0
text = "Monster Name"

[node name="Life" type="Label" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel/Column/MonsterWidget2"]
margin_left = 148.0
margin_right = 594.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "85/120"
align = 2

[node name="PartyPanel" type="Panel" parent="CombatInterface/OldSchoolUI/Row"]
margin_left = 650.0
margin_right = 1920.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Column" type="VBoxContainer" parent="CombatInterface/OldSchoolUI/Row/PartyPanel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Control" type="Control" parent="CombatInterface/OldSchoolUI/Row/PartyPanel/Column"]
margin_right = 40.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="CombatInterface/OldSchoolUI/Row/PartyPanel/Column"]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ActionSelector" type="Control" parent="CombatInterface"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -171.0

[node name="ItemList" type="ItemList" parent="CombatInterface/ActionSelector"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -70.0
margin_right = 65.0
margin_bottom = 70.0
items = [ "Slash", null, false, "Crush", null, true, "Anihilate", null, false ]

[node name="BattlersBarsBuilder" parent="CombatInterface" instance=ExtResource( 10 )]

[node name="Rewards" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="Panel" type="Panel" parent="Rewards"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -766.0
margin_top = 22.0
margin_right = 767.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="Rewards/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "EXP Earned"
align = 1
valign = 1
[connection signal="victory" from="." to="Rewards" method="_on_victory"]
[connection signal="item_selected" from="CombatInterface/ActionSelector/ItemList" to="CombatInterface" method="_on_ItemList_item_selected"]
